# work_daily

./: .env  .gitignore  database.db  db.py  deepseek.py  main.py  prompt.txt  pyproject.toml  report.py  scheduler.py  test.py
api/: user_repo.py
daily/: 2025-06.md
daily/2025-06/: 2025-06-07.md
db/: __init__.py  database.db  models.py
reports/: 2025-06.txt
static/: index.html
static/js/: vue.esm-browser.min.js
utils/: repo_utils.py
